tests/integration/snapshots/integration__snapshot__unpinned-uses-ref-pin-everything-config.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().config(input_under_test(\"unpinned-uses/configs/ref-pin-everything.yml\")).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:13:9
   |
13 |       - uses: actions/checkout
   |         ^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a ref or hash (required by blanket policy)
   |
   = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
